src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A29.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A29 {
  class C1 {
    List<Optional<String>> a;
  }  
  class C2 {
    Optional<List<String>> a;
  }  
}
